--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,40 +34,40 @@
         android:label="@string/app_name" >
         <activity
             android:name="SplashScreen"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".account.LoginActivity" >
+        <activity android:name=".account.LoginActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
-        <activity android:name=".NoConnectivityScreen" >
+        <activity android:name=".NoConnectivityScreen" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
-        <activity android:name=".FacebookShare">
+        <activity android:name=".FacebookShare" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
         </activity>
-        <activity android:name=".TwitterShare">
+        <activity android:name=".TwitterShare" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
         </activity>
-        <activity android:name=".twitter.PrepareRequestTokenActivity" android:launchMode="singleTask">
+        <activity android:name=".twitter.PrepareRequestTokenActivity" android:launchMode="singleTask" android:screenOrientation="portrait">
             <intent-filter>               
                 <action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
@@ -75,13 +75,13 @@
 				<data android:scheme="x-oauthflow-twitter" android:host="callback" />
             </intent-filter>
         </activity>
-        <activity android:name="MainScreen">
+        <activity android:name="MainScreen" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
         </activity>
-        <activity android:name="FacebookShare">
+        <activity android:name="FacebookShare" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
