--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,8 @@
     </uses-permission>
     <uses-permission android:name="android.permission.CAMERA" >
     </uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
     <supports-screens android:anyDensity="true" android:largeScreens="true" android:smallScreens="true" android:normalScreens="true"/>
     <supports-screens />
 
@@ -75,7 +77,7 @@
 				<data android:scheme="x-oauthflow-twitter" android:host="callback" />
             </intent-filter>
         </activity>
-        <activity android:name="MainScreen" android:screenOrientation="portrait">
+        <activity android:name=".MainFragmentActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
