made changes to the FB and TW logic for loading for the first time, and displayes the Like and follow logic

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -115,6 +115,12 @@
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
+        <activity android:name="FbWebPage">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
